<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Top Bar Layout -->

        <Button
            android:id="@+id/button_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="Analytics"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Overall Score Display -->
        <TextView
            android:id="@+id/overallScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="Overall Score: -"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Summary Display -->
        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Summary will be displayed here..."
            android:textSize="16sp" />

        <Button
            android:id="@+id/emotionFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="Select Emotions" />

        <!-- Analytics Chart -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/analyticsChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/activityfilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Select Activities" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/activities_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:color/white" />

    </LinearLayout>

</ScrollView>
