...
    <string name="nextmonthbuttontext"><![CDATA[-->]]></string>
    <string name="Monthyear">February 2025</string>
    <string name="Journal_date">Journal Entry for:</string>
    <string name="save_entry_button">Save Entry</string>
    <string name="write_your_journal_entry_here_hint">Write your journal entry here...</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="analytics_button">Analytics</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

...
