...
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calenderrecycleView"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:background="@color/material_dynamic_primary95" />

        <LinearLayout
            android:layout_width="match_parent"
...
